--- a/AiLearningPlatform/frontend/src/css/dashboard.css
+++ b/AiLearningPlatform/frontend/src/css/dashboard.css
@@ -1,10 +1,10 @@
 .dashboard-container {
-  background: linear-gradient(135deg, #e5dbff, #f8f4ff);
-  padding: 3rem, 5rem;
+  background: linear-gradient(135deg, #e5dbff, #f8f4ff) !important;
+  padding: 2rem 6rem !important;
   border-radius: 16px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
-  max-width: 1000px;
-  margin: 2rem auto;
+  max-width: 500px;
+  margin: 5rem auto;
 }
 
 .dashboard-title {
@@ -17,8 +17,7 @@
 
 .history-toggle-button {
   padding: 0.8rem 1.5rem;
-  background-color: #6a11cb;
-  color: white;
+  background: linear-gradient(135deg, #e5dbff, #f8f4ff);
   font-weight: bold;
   font-size: 1.1rem;
   border: none;
@@ -30,10 +29,10 @@
 
 .history-toggle-button:hover {
   background-color: #4a2a8c;
-  color: white;
+  color: #8667c5;
 }
 
-.category-selector-section,
+/* .category-selector-section,
 .prompt-form-section,
 .user-prompt-history-section {
   background: rgba(255, 255, 255, 0.8);
@@ -42,7 +41,7 @@
   padding: 2rem;
   box-shadow: 0 4px 12px rgba(106, 17, 203, 0.05);
   margin-bottom: 2rem;
-}
+} */
 
 .category-selector-section h2,
 .prompt-form-section h2,
